--- a/src/components/taskdescription/DescriptionComponent.css
+++ b/src/components/taskdescription/DescriptionComponent.css
@@ -36,7 +36,10 @@
     outline: 0;
     width: 100%;
     min-height: 100px;
-    padding: 8px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
     font-size: 14px;
   }
 
@@ -65,6 +68,7 @@
     border: 0;
     outline: 0;
     font-size: 14px;
+    padding-left: 10px;
   }
 
   .divmargin{
@@ -72,9 +76,14 @@
 }
 
   .addstepimage{
-    width: 16px;
-    height: 16px;
-    margin: 8px; 
+    width: 20px;
+    height: 20px;
+  }
+
+  .greycircletheme {
+    width: 19px;
+    height: 19px;
+    margin-left: 5px;
   }
   
 .steplablewithcolor{
@@ -106,7 +115,6 @@
 
 .addstepimagewithflex{
   flex: 0.2;
-  width: 16px;
-  height: 16px;
-  margin: 8px; 
+  width: 20px;
+  height: 20px;
 }
