--- a/src/components/tasklist/TaskList.css
+++ b/src/components/tasklist/TaskList.css
@@ -92,7 +92,7 @@
   
   .crossed-line {
     text-decoration: line-through;
-    padding-left: 8px;
+    padding-left: 10px;
 }
 
 .taskdiv{
